system/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: statping
  namespace: production
  labels:
    name: statping
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - statping.116-202-12-69.nip.io
      secretName: statping.116-202-12-69.nip.io-secret
  rules:
  - host: statping.116-202-12-69.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: statping
            port:
              number: 8080
